--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -1,4 +1,4 @@
-repository:
+  repository: IBM-EPBL/IBM-Project-30133-1660140562
   name: app
   description: Pull Requests for GitHub repository settings
   homepage: https://github.com/apps/settings
